pr124532: Reset musttail attribute in compound statements

A compound statement didn't reset the musttail state after the statement
with the attribute, which led to bogus errors later. Always reset it.

	PR c/124532

gcc/c/ChangeLog:

	* c-parser.cc (struct attr_state): Add reset method.
	(c_parser_compound_statement_nostart): Rename a to astate.
	Reset state before iterating statements.

gcc/testsuite/ChangeLog:

	* c-c++-common/pr124532.c: New test.